Fixed Flex bug on Chrome 73 - Categories are now perfectly overflowed

--- a/scss/layout/l-categories.scss
+++ b/scss/layout/l-categories.scss
@@ -3,6 +3,7 @@
 	background-color: #f0f0f0;
 	position: relative;
 	padding-top: 64px;
+	min-height: 0;
 
 	&.m--horizontal {
 		padding-top: 0;
